tools/tests/errors/surf_exc_09.experr
'C' object has no attribute '_enter_'
